--- a/package.json
+++ b/package.json
@@ -8,22 +8,27 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@types/axios": "^0.14.0",
+    "@types/node": "^14.14.41",
     "axios": "^0.21.1",
     "mobx": "^6.2.0",
     "mobx-react": "^7.1.0",
     "next": "10.1.3",
     "next-i18next": "^8.1.3",
     "polished": "^3.7.1",
-    "primeicons": "^4.1.0",
-    "primereact": "^6.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-i18next": "^11.8.13",
-    "react-transition-group": "^4.4.1"
+    "react-transition-group": "^4.4.1",
+    "sass": "^1.32.8"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.2.1",
     "typescript": "^4.2.4"
   }
 }
