--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/axios": "^0.14.0",
     "@types/node": "^14.14.41",
     "axios": "^0.21.1",
+    "clx": "^1.0.0",
     "mobx": "^6.2.0",
     "mobx-react": "^7.1.0",
     "next": "10.1.3",
