--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
     "@types/axios": "^0.14.0",
     "@types/node": "^14.14.41",
     "axios": "^0.21.1",
+    "binance-api-node": "^0.11.3",
     "clx": "^1.0.0",
     "mobx": "^6.2.0",
     "mobx-react": "^7.1.0",
-    "next": "10.1.3",
+    "next": "^10.1.3",
     "next-i18next": "^8.1.3",
+    "node-binance-api": "^0.12.5",
     "polished": "^3.7.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-google-charts": "^3.0.15",
     "react-i18next": "^11.8.13",
     "react-transition-group": "^4.4.1",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
