--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/x-data-grid": "^4.0.0",
-    "@types/axios": "^0.14.0",
-    "@types/node": "^14.14.41",
     "axios": "^0.21.1",
     "binance-api-node": "^0.11.13",
     "clx": "^1.0.0",
+    "lodash": "4.17.21",
+    "lodash-es": "^4.17.21",
     "mobx": "^6.2.0",
     "mobx-react": "^7.1.0",
     "next": "^10.1.3",
@@ -28,12 +28,16 @@
     "react-i18next": "^11.8.13",
     "react-transition-group": "^4.4.1",
     "sass": "^1.32.8",
-    "swr": "^0.5.6"
+    "swr": "^0.5.6",
+    "dayjs": "^1.11.2"
   },
   "devDependencies": {
     "@material-ui/styles": "^4.11.4",
     "@mui/x-data-grid-generator": "^4.0.0",
     "@types/react": "^17.0.3",
+    "@types/axios": "^0.14.0",
+    "@types/node": "^14.14.41",
+    "@types/lodash": "^4.14.182",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.2.1",
